--- a/templates/choice_R21.html
+++ b/templates/choice_R21.html
@@ -10,7 +10,7 @@
 <meta charset="utf-8">
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Scenario</title>
+<title>Choice</title>
 <link rel="stylesheet" href="../static/css/dash-resetnav.css"> <!-- CSS reset -->
   <link rel="stylesheet" href="../static/css/dash-stylenav.css"> <!-- Resource style -->
   <script src="../static/js/dash-modernizrnav.js"></script> <!-- For Nav-->
@@ -20,26 +20,28 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 
+
 <body onload="available_options({{options}})">
-<script type="text/javascript">
+  <script type="text/javascript">
   function available_options(op)
   {
-    op2 = parseInt(op);
+    op2 = parseInt(op)
     switch(op2)
     {
+      // case 0:
+        // document.getElementById('check1').disabled = true;
       case 1:
         document.getElementById('check3').disabled = true;
       case 2:
-        document.getElementById('check2').disabled = true;
-      case 3:
-        document.getElementById('check1').disabled = true;
+        document.getElementById('check2').disabled = true;      
       default:
         return;
     }
 
   }
 </script>
-	<header>
+
+  <header>
   <nav class="cd-stretchy-nav">
     <a class="cd-nav-trigger" href="#0">
       <span aria-hidden="true"></span>
@@ -59,74 +61,73 @@
   <div class="container">
     <div class="col-md-10 col-md-offset-1">
       <div class="banner-text text-center">
-        <h1>ATTENTION!</h1>
-        <p>The negligence of the personnel in charge of the construction towards the safety of the workers resulted in two fatalities. How would you cope with the situation?
-
+        <h1>Make Selection:</h1>
+        <p>Your second choice decides the design of the castle you'll build. After the end of the second round, you have amassed {{money}} Gold Dragons. Use them to select an architect with a specific specialization:
         </br>
         </br>
-        Option 1: Pay off the local authorities and get away with it. 
-
+        Green Design Architect: Minimizes harmful effects on human health and the environment. Green architects attempt to safeguard air, water and earth by choosing eco-friendly building materials and construction practices. They continuously work on innovating effective green design methods that leave a minimal impact on the environment. These architects are knowledgeable in fields like aerodynamics, sun and shading, as well as properties of materials.
         </br>
         </br>
-        Option 2: Compensate the families for their loss. 
+        Commercial Architect: Commercial architects are licensed professionals that design buildings and structures for non-residential use such as retail and office buildings. They apply artistic, construction and engineering skills to design a variety of commercial buildings and structures. They basically meet the requirements of the client and manage their budget.
         </br>
         </br>
-        Option 3: Compensate the families for their loss and improve safety standards. 
+        Urban Designer: Urban design is the process of shaping the physical setting for life in cities, towns and villages. It blends architecture, landscape architecture, and city planning together to make urban areas functional and attractive. They bring human interaction with the environment. Urban design can help make towns and cities safer and more secure.
+        </br>  
         </p> 
     </div>
   </div>
 </section>
 <section id="works" class="works section no-padding">
   <form action="/choice" method="POST">
+
   <div class="container-fluid">
     <div class="row no-gutter">
-      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="../image/work-1.jpg" class="work-box"> <img src="../static/image/scenario_6_2/work-1.jpg" alt="">
+      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/choice_2/work-1.jpg" alt="">
         <div class="overlay">
           <div class="overlay-caption">
-            <h5>Bribe Local Authorities</h5>
-            <p>Price: 2 Lakh</p>
+            <h5>Green Design Architect</h5>
+            <p>Price: 30 Lakh</p>
           </div>
         </div>
         <!-- overlay --> 
         </a> 
         <div class"selection">
-         <input type="radio" name="negligence" class="radio" id="check1" value = "Bribe"/>
-       </div> 
+         <input type="radio" name="arch" class="radio" id="check1" value = "GreenDesignArchitect"/>
+          
+       </div>  
       </div>
-      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="../image/work-2.jpg" class="work-box"> <img src="../static/image/scenario_6_2/work-2.jpg" alt="">
+      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/choice_2/work-2.jpg" alt="">
         <div class="overlay">
           <div class="overlay-caption">
-            <h5>Compensate Families</h5>
-            <p>Price: 8 Lakh</p>
-          </div>
-        </div>
-        <!-- overlay --> 
-        </a>
-         <div class"selection">
-         <input type="radio" name="negligence" class="radio" id="check2" value = "Compensate"/>
-       </div> 
-         </div>
-         <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="../image/work-3.jpg" class="work-box"> <img src="../static/image/scenario_6_2/work-3.jpg" alt="">
-        <div class="overlay">
-          <div class="overlay-caption">
-            <h5>Compensate Families and Increase Safety</h5>
-            <p>Price: 15 Lakh</p>
+            <h5>Commercial Architect</h5>
+            <p>Price: 22 Lakh</p>
           </div>
         </div>
         <!-- overlay --> 
         </a> 
-         <div class"selection">
-         <input type="radio" name="negligence" class="radio" id="check3" value = "Compensate&Increase"/>
-       </div> 
-      </div>
-
+        <div class"selection">
+       </div>  
+         <input type="radio" name="arch" class="radio" id="check2" value = "CommercialArchitect"/>
+      </div>          
+      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/choice_2/work-3.jpg" alt="">
+        <div class="overlay">
+          <div class="overlay-caption">
+            <h5>Urban Designer</h5>
+            <p>Price: 40 Lakh</p>
+          </div>
+        </div>
+        </a> 
+          <div class"selection">
+       </div>  
+         <input type="radio" name="arch" class="radio" id="check3" value = "UrbanDesigner"/>
+      </div>          
     </div>
   </div>
-  <div id="buttons">
-        <!-- <a href="dashboard.html" class="btn orange">Proceed</a> -->
+     <div id="buttons">
         <input type="submit" class ="btn orange" value="Finalize">
+
     </div>
-</form>
+  </form>
 </section>
 <script src="../static/js/dash-jquery-2.1.4.js"></script>
 <script src="../static/js/dash-mainnav.js"></script>
