--- a/templates/choice_R3_21.html
+++ b/templates/choice_R3_21.html
@@ -10,12 +10,13 @@
 <meta charset="utf-8">
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Scenario</title>
+<title>Choice</title>
 <link rel="stylesheet" href="../static/css/dash-resetnav.css"> <!-- CSS reset -->
   <link rel="stylesheet" href="../static/css/dash-stylenav.css"> <!-- Resource style -->
   <script src="../static/js/dash-modernizrnav.js"></script> <!-- For Nav-->
+
 <link rel="stylesheet" href="../static/css/choice-bootstrap.min.css">
-<link rel="stylesheet" href="../static/css/choice-R5.css">
+<link rel="stylesheet" href="../static/css/choice-R2.css">
 <link rel="stylesheet" href="../static/css/checkbox-button.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
@@ -27,11 +28,11 @@
     op2 = parseInt(op);
     switch(op2)
     {
-      case 1:
+      case 0:
         document.getElementById('check3').disabled = true;
-      case 2:
+      case 1:
         document.getElementById('check2').disabled = true;
-      case 3:
+      case 2:
         document.getElementById('check1').disabled = true;
       default:
         return;
@@ -59,62 +60,80 @@
   <div class="container">
     <div class="col-md-10 col-md-offset-1">
       <div class="banner-text text-center">
-        <h1>ATTENTION!</h1>
-        <p>Jon Snow has started construction. All the materials have been gathered and a builder who lives far away from the plot has been hired along with his workers. The workers are skilled but at the same time costlier.
-Now, Queen Daenerys offers help, but on the condition that he has to hire all her people, present right here at the site of construction, as workers. They are unskilled but they are cheaper.
-But Snow has already given his word and signed a contract with the builder. He is in a dilemma about whom to choose.
-What do you advise him to do?
-
+        <h1>Make Selection:</h1>
+        <p>We're also going to pick one of three potential surveyors. You have {{money}} Gold Dragons left after paying the Geotechnical Engineer. Use them to select a surveyor from the choices below:
         </br>
         </br>
-        Option 1: Hire the Queen's followers at a cheaper rate.
-
+        Surveyor A: She will use all the modern equipment like Electronic Distance Measurement (EDM), Total station providing utmost accuracy with better decision making, computing & data processing.
         </br>
         </br>
-        Option 2: Hire the builder and his skilled workforce.
+        Surveyor B: He will use equipment which will provide moderate degree of accuracy.
+        </br>
+        </br>
+        Surveyor C: He will use equipment which will provide optimum degree of accuracy, poor decision making, fluctuating data collection and poor mapping.
         </p> 
     </div>
   </div>
 </section>
 <section id="works" class="works section no-padding">
   <form action="/choice" method="POST">
+
   <div class="container-fluid">
     <div class="row no-gutter">
-      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/scenario_6_1/work-1.jpg" alt="">
+      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/choice_3_2/work-1.jpg" alt="">
         <div class="overlay">
           <div class="overlay-caption">
-            <h5>Accept Queen’s offer</h5>
-            <p>Price: 1.5 Crore</p>
+            <h5>Surveyor A</h5>
+            <p>Price: 10 Lakh</p>
+          </div>
+        </div>
+        <!-- overlay --> 
+        </a> 
+        <div class"selection">
+         <input type="radio" name="survey" class="radio" id="check1" value = "SurveyorA"/>
+         
+         </div>  
+
+      </div>
+      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/choice_3_2/work-2.jpg" alt="">
+        <div class="overlay">
+          <div class="overlay-caption">
+            <h5>Surveyor B</h5>
+            <p>Price: 7 Lakh</p>
           </div>
         </div>
         <!-- overlay --> 
         </a>
-         <div class"selection">
-         <input type="radio" name="hire" class="radio" id="check1" value = "Accept"/>
+          <div class"selection">
+         <input type="radio" name="survey" class="radio" id="check2" value = "SurveyorB"/>
+
        </div>  
+
          </div>
-      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/scenario_6_1/work-2.jpg" alt="">
+      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/choice_3_2/work-3.jpg" alt="">
         <div class="overlay">
           <div class="overlay-caption">
-            <h5>Uphold the contract.</h5>
-            <p>Price: 2 Crore</p>
+            <h5>Surveyor C</h5>
+            <p>Price: 4 Lakh</p>
           </div>
         </div>
-        <!-- overlay --> 
         </a>
-         <div class"selection">
-         <input type="radio" name="hire" class="radio" id="check2" value = "Uphold"/>
+        <div class"selection">
+         <input type="radio" name="survey" class="radio" id="check3" value = "SurveyorC"/>
+
        </div>  
+
          </div>
     </div>
   </div>
-   <div id="buttons">
+  <div id="buttons">
         <!-- <a href="dashboard.html" class="btn orange">Proceed</a> -->
         <input type="submit" class ="btn orange" value="Finalize">
+
     </div>
-</form>
 </section>
 <script src="../static/js/dash-jquery-2.1.4.js"></script>
 <script src="../static/js/dash-mainnav.js"></script>
 </body>
+
 </html>
