--- a/templates/scenario_31.html
+++ b/templates/scenario_31.html
@@ -15,18 +15,20 @@
   <link rel="stylesheet" href="../static/css/dash-stylenav.css"> <!-- Resource style -->
   <script src="../static/js/dash-modernizrnav.js"></script> <!-- For Nav-->
 <link rel="stylesheet" href="../static/css/choice-bootstrap.min.css">
-<link rel="stylesheet" href="../static/css/choice-R2.css">
+<link rel="stylesheet" href="../static/css/choice-R3-2.css">
 <link rel="stylesheet" href="../static/css/checkbox-button.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 
 <body onload="available_options({{options}})">
-<script type="text/javascript">
+  <script type="text/javascript">
   function available_options(op)
   {
     op2 = parseInt(op);
     switch(op2)
     {
+      case 0:
+        document.getElementById('check4').disabled = true;
       case 1:
         document.getElementById('check3').disabled = true;
       case 2:
@@ -39,7 +41,7 @@
 
   }
 </script>
-	<header>
+   <header>
   <nav class="cd-stretchy-nav">
     <a class="cd-nav-trigger" href="#0">
       <span aria-hidden="true"></span>
@@ -60,18 +62,22 @@
     <div class="col-md-10 col-md-offset-1">
       <div class="banner-text text-center">
         <h1>ATTENTION!</h1>
-        <p>The negligence of the personnel in charge of the construction towards the safety of the workers resulted in two fatalities. How would you cope with the situation?
-
+        <p>Soil testing has revealed that the soil strength is below the required threshold to safely construct the castle. What do you suppose we do now?
         </br>
         </br>
-        Option 1: Pay off the local authorities and get away with it. 
-
+        Option 1: Remove the poor soil first and then fill the gap with superior material such as sand, stone or gravel. In order to do this, first excavate a foundation trench of about 1.5 m deep, and then fill the hard material is stages of 30 cm.
         </br>
         </br>
-        Option 2: Compensate the families for their loss. 
+        Option 2: Inject chemical solutions, like silicates of soda and calcium chloride with pressure into the soil. These chemical along with the soil particles form a gel like structure and develop a compact mass. This gives additional strength to soft soils at deeper depths.
         </br>
         </br>
-        Option 3: Compensate the families for their loss and improve safety standards. 
+        Option 3: Compact the soil by ramming or rolling, thus increasing its density and shear strength. As a result the bearing capacity of soil also increases.
+        </br>
+        </br>
+        Option 4: Leave the soil as it is, and risk it. 
+          </br>
+        </br>
+           <b>Money: {{money}}</b>
         </p> 
     </div>
   </div>
@@ -80,55 +86,72 @@
   <form action="/choice" method="POST">
   <div class="container-fluid">
     <div class="row no-gutter">
-      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="../image/work-1.jpg" class="work-box"> <img src="../static/image/scenario_6_2/work-1.jpg" alt="">
+      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/scenario_3/work-1.jpg" alt="">
         <div class="overlay">
           <div class="overlay-caption">
-            <h5>Bribe Local Authorities</h5>
-            <p>Price: 2 Lakh</p>
+            <h5>Replace The Poor Soil.</h5>
+            <p>Price: 1.3 Lakh</p>
           </div>
         </div>
         <!-- overlay --> 
-        </a> 
-        <div class"selection">
-         <input type="radio" name="negligence" class="radio" id="check1" value = "Bribe"/>
-       </div> 
-      </div>
-      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="../image/work-2.jpg" class="work-box"> <img src="../static/image/scenario_6_2/work-2.jpg" alt="">
-        <div class="overlay">
-          <div class="overlay-caption">
-            <h5>Compensate Families</h5>
-            <p>Price: 8 Lakh</p>
-          </div>
-        </div>
-        <!-- overlay --> 
-        </a>
-         <div class"selection">
-         <input type="radio" name="negligence" class="radio" id="check2" value = "Compensate"/>
+        </a><div class"selection">
+         <input type="radio" name="soilReport" class="radio" id="check1" value = "replace"/>
+
        </div> 
          </div>
-         <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="../image/work-3.jpg" class="work-box"> <img src="../static/image/scenario_6_2/work-3.jpg" alt="">
+      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box">  <img src="../static/image/scenario_3/work-2.jpg" alt="">
+      
         <div class="overlay">
+              
           <div class="overlay-caption">
-            <h5>Compensate Families and Increase Safety</h5>
-            <p>Price: 15 Lakh</p>
+            <h5>Chemical Stabilization</h5>
+            <p>Price: 4 Lakh</p>
           </div>
         </div>
         <!-- overlay --> 
-        </a> 
-         <div class"selection">
-         <input type="radio" name="negligence" class="radio" id="check3" value = "Compensate&Increase"/>
+        </a>  <div class"selection">
+         <input type="radio" name="soilReport" class="radio" id="check2" value = "chemical"/>
+
        </div> 
       </div>
+      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/scenario_3/work-3.jpg" alt="">
+        <div class="overlay">
+          <div class="overlay-caption">
+            <h5>Compact The Soil</h5>
+            <p>Price: 50,000</p>
+          </div>
+        </div>
+        </a>
+        <div class"selection">
+ 
+         <input type="radio" name="soilReport" class="radio" id="check3" value = "compact"/>
 
+       </div>  
+      </div>
+       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/scenario_3/work-4.jpg" alt="">
+        <div class="overlay">
+          <div class="overlay-caption">
+            <h5>Do Nothing</h5>
+            <p>Price: 0</p>
+          </div>
+        </div>
+        </a>
+        <div class"selection">
+         <input type="radio" name="soilReport" class="radio" id="check4" value = "nothing"/>
+
+       </div> 
+      </div>
     </div>
   </div>
-  <div id="buttons">
-        <!-- <a href="dashboard.html" class="btn orange">Proceed</a> -->
+<div id="buttons">
         <input type="submit" class ="btn orange" value="Finalize">
+
     </div>
-</form>
+  </form>
 </section>
+
 <script src="../static/js/dash-jquery-2.1.4.js"></script>
 <script src="../static/js/dash-mainnav.js"></script>
+
 </body>
 </html>
