--- a/static/css/checkbox-button.css
+++ b/static/css/checkbox-button.css
@@ -36,7 +36,7 @@
 
 /* start da css for da buttons */
 .btn {
-
+  
   border-radius: 10px;
   padding: 15px 25px;
   font-size: 22px;
@@ -44,7 +44,7 @@
   color: #fff;
   position:absolute;
   top:160vh;
-  right:45%;
+  right:47%;
   z-index: 3000;
 }
 
@@ -62,4 +62,10 @@
 .orange:hover {
   background-color: #101524;
   color:#ffffff;
+}
+@media only screen and (max-width: 1100px){
+  .btn{
+    position: fixed;
+    top:80vh;
+  }
 }
