--- a/static/css/choice-R1.css
+++ b/static/css/choice-R1.css
@@ -6,7 +6,10 @@
 	background-color: #3d3d3d;
 	color: #fff;
 }
-
+.bt{
+	position: fixed;
+	bottom: 10vh;
+}
 
 body {
 	font-family: "Open Sans", Arial, sans-serif;
