--- a/static/css/choice-R2.css
+++ b/static/css/choice-R2.css
@@ -12,6 +12,11 @@ body {
 	font-family: "Open Sans", Arial, sans-serif;
 	font-weight: 400;
 	color: #6c7279;
+	background-color: rgba(40,57,101,1);
+}
+table, th, td {
+    color: #ffffff;
+    text-align: center;
 }
 ul, ol {
 	margin: 0;
@@ -116,6 +121,17 @@ ul li {
 	box-shadow: 0 0 0 1px #fff;
 	overflow: hidden;
 	position: relative;
+	left: 12vw;
+}
+@media only screen and (max-width: 1100px){
+	.work {
+	-moz-box-shadow: 0 0 0 1px #fff;
+	-webkit-box-shadow: 0 0 0 1px #fff;
+	box-shadow: 0 0 0 1px #fff;
+	overflow: hidden;
+	position: relative;
+	left: 0;
+}
 }
 .work img {
 	width: 100%;
