--- a/templates/dashboard-final.html
+++ b/templates/dashboard-final.html
@@ -47,7 +47,7 @@
 						Greetings!
 						The Mother of Dragons, Queen Daenerys, wants to construct the Dragon Pit (castle) to house her dragons. Jon Snow decided to help her find the perfect plot of land for her castle and thus, sent Maesters all over the country. You are one such Maester. 
 						<div id="buttons" class='b1'>
-  			<a href="dashboard.html" class="btn orange">Proceed</a>
+  			<a href="/question" class="btn orange">Proceed</a>
 		</div>
 					</p>
 				</div> <!-- .cd-project-info -->
