--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -68,7 +68,7 @@
 						Greetings!
 						The Mother of Dragons, Queen Daenerys, wants to construct the Dragon Pit (castle) to house her dragons. Jon Snow decided to help her find the perfect plot of land for her castle and thus, sent Maesters all over the country. You are one such Maester. 
 						<div id="buttons" class='b1'>
-  			<a href="dashboard.html" class="btn orange">Proceed</a>
+  			<a href="/question" class="btn orange">Proceed</a>
 		</div>
 					</p>
 				</div> <!-- .cd-project-info -->
@@ -84,7 +84,7 @@
 					<p>
 						Let us seek the help of our architect friends. Well, what do architects do? They are responsible for designing structures. They shall help us with the design and aesthetic view of the castle, but they won’t do it for free. Thankfully, Greyworm and the Unsullied have returned from the siege of Casterly Rock and have enough gold to cover the costs.
 						<div id="buttons" class='b2'>
-  			<a href="dashboard.html" class="btn orange">Proceed</a>
+  			<a href="/question" class="btn orange">Proceed</a>
 		</div>
 					</p>
 				</div> <!-- .cd-project-info -->
@@ -100,7 +100,7 @@
 					<p>
 						Now we move on to the next stage, where you need to consult a geotechnical engineer who will make sure that the castle possess certain features, like a strong foundation, safety from the winds of winter, stability in the Storm Lands and the hills of The Vale, etc. They test the soil, its bearing capacity, and the behavior of its constituents. A surveyor marks the boundaries of the castle walls. Surveying is done across the tract of land. Linear and angular measurements are taken. Land is examined on all accounts and a comprehensive view of structure is analyzed.
 						<div id="buttons" class='b3'>
-  			<a href="dashboard.html" class="btn orange">Proceed</a>
+  			<a href="/question" class="btn orange">Proceed</a>
 		</div>
 					</p>
 				</div> <!-- .cd-project-info -->
@@ -119,7 +119,7 @@
 
 						Seven hells, that was tough. Excavation is basically a making a cavity by either cutting, digging or scooping. 
 						<div id="buttons" class='b4'>
-  			<a href="dashboard.html" class="btn orange">Proceed</a>
+  			<a href="/question" class="btn orange">Proceed</a>
 		</div>
 					</p>
 				</div> <!-- .cd-project-info -->
@@ -135,7 +135,7 @@
 					<p>
 						Now for the most important part: The foundation of the castle. (We’ll need a strong foundation if dragons are to roam these halls.) Choose the type of foundation you want to construct. Keep in mind the soil bearing capacity, nature of surveyed land, safety aspects, etc. 
 						<div id="buttons" class='b5'>
-  			<a href="dashboard.html" class="btn orange">Proceed</a>
+  			<a href="/question" class="btn orange">Proceed</a>
 		</div>
 					</p>
 				</div> <!-- .cd-project-info -->
@@ -151,7 +151,7 @@
 					<p>
 						Mix proportion is the quantity of materials required to prepare concrete of required strength...we need tons of it to hold against the Army of the Dead. We need to mix cement, course aggregate, fine aggregate and water in a certain proportion. If only Bran the Builder were here to help. 
 						<div id="buttons" class='b6'>
-  			<a href="dashboard.html" class="btn orange">Proceed</a>
+  			<a href="/question" class="btn orange">Proceed</a>
 		</div>
 					</p>
 				</div> <!-- .cd-project-info -->
