--- a/templates/choice_R6_2.html
+++ b/templates/choice_R6_2.html
@@ -27,12 +27,12 @@
     op2 = parseInt(op);
     switch(op2)
     {
-      case 1:
-        document.getElementById('check3').disabled = true;
-      case 2:
-        document.getElementById('check2').disabled = true;
-      case 3:
+      case 0:
         document.getElementById('check1').disabled = true;
+      case 1:
+        document.getElementById('check2').disabled = true;
+      case 2:
+        document.getElementById('check3').disabled = true;
       default:
         return;
     }
@@ -148,13 +148,12 @@
         </div>
         </a>
          <div class"selection">
-         <input type="radio" name="FineAggregate" class="radio" id="check3" value = "Westros&EsssosCo"/>
+         <input type="radio" name="FineAggregate" class="radio" id="check3" value = "WestrosEsssosCo"/>
        </div> 
          </div>
     </div>
   </div>
   <div id="buttons">
-        <!-- <a href="dashboard.html" class="btn orange">Proceed</a> -->
         <input type="submit" class ="btn orange" value="Finalize">
     </div>
 </form>
