--- a/templates/scenario_6_2.html
+++ b/templates/scenario_6_2.html
@@ -29,12 +29,12 @@
     op2 = parseInt(op);
     switch(op2)
     {
-      case 1:
-        document.getElementById('check3').disabled = true;
-      case 2:
-        document.getElementById('check2').disabled = true;
-      case 3:
+      case 0:
         document.getElementById('check1').disabled = true;
+      case 1:
+        document.getElementById('check2').disabled = true;
+      case 2:
+        document.getElementById('check3').disabled = true;
       default:
         return;
     }
@@ -118,14 +118,13 @@
         <!-- overlay --> 
         </a> 
          <div class"selection">
-         <input type="radio" name="negligence" class="radio" id="check3" value = "Compensate&Increase"/>
+         <input type="radio" name="negligence" class="radio" id="check3" value = "CompensateIncrease"/>
        </div> 
       </div>
 
     </div>
   </div>
   <div id="buttons">
-        <!-- <a href="dashboard.html" class="btn orange">Proceed</a> -->
         <input type="submit" class ="btn orange" value="Finalize">
     </div>
 </form>
