--- a/templates/choice_R1.html
+++ b/templates/choice_R1.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,15 +16,13 @@
 <title>Choice</title>
 
 <link rel="stylesheet" href="../static/css/dash-resetnav.css"> <!-- CSS reset -->
-
   <link rel="stylesheet" href="../static/css/dash-stylenav.css"> <!-- Resource style -->
   <script src="../static/js/dash-modernizrnav.js"></script> <!-- For Nav-->
 <link rel="stylesheet" href="../static/css/choice-bootstrap.min.css">
-<link rel="stylesheet" href="../static/css/choice-R1.css">
 <link rel="stylesheet" href="../static/css/checkbox-button.css">
+<link rel="stylesheet" href="../static/css/choice-R1.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
-
 
 <body onload="available_options({{options}})">
 <script type="text/javascript">
@@ -67,7 +64,6 @@
     <div class="col-md-10 col-md-offset-1">
       <div class="banner-text text-center">
         <h1>Make Selection:</h1>
-
         <p>The first choice you have to make is the basest of them all: The soil that makes up your plot of land. After the end of the first round, you have amassed {{money}} Gold Dragons. Use them to select a soil type from the choices below:
         </br>
         </br>
@@ -77,7 +73,7 @@
         Laterite Soil: The use of laterite soil has been found to promote the realization of decent housing and bridging the housing deficit. Lateritic soils have been described as highly weathered tropical residual soils with varying proportions of particle sizes ranging from clay size to gravel.
         </br>
         </br>
-        Blacl Soil: Black soil has a tendency to shrink and swell excessively. When these type of soil come in contact with water, they swell and shrinks when dry. This alternate process of swelling and shrinking results in the differential settlement of foundation which in turn causes cracks in building. The property of volumetric changes with the change of atmospheric conditions makes black cotton soil dangerous to be founded buildings.
+        Black Soil: Black soil has a tendency to shrink and swell excessively. When these type of soil come in contact with water, they swell and shrinks when dry. This alternate process of swelling and shrinking results in the differential settlement of foundation which in turn causes cracks in building. The property of volumetric changes with the change of atmospheric conditions makes black cotton soil dangerous to be founded buildings.
         </br>
         </br>
         Mountain Soil: These soils are heterogeneous in nature and their character changes with parent rocks and climate. These vary from sandy loam to loamy. Loam is great for supporting foundations because of its evenly balanced properties and have 32-41% water holding capacity.
