working round6 retry and half working rapidfire

--- a/templates/choice_R6_5.html
+++ b/templates/choice_R6_5.html
@@ -66,7 +66,7 @@
         Sandline Corporation: 11,360</br>
         Pentos Limited: 8610</br>
         Westeros & Esssos Co.: 7350</br>    
-        You have {{}} Gold Dragons left for this round. 
+        You have {{money}} Gold Dragons left for this round. 
         Select Super Placticizer Quality:</p>
 <table style="width:100%">
   <tr>
