--- a/templates/rapidfire.html
+++ b/templates/rapidfire.html
@@ -150,7 +150,7 @@ input[type="submit skip"] {
       <br>
       {% endif %}
     <form action="/rapidfire" method="POST">
-    <input type="text" name="Answer"><br>
+    <input type="text" name="ans"><br>
 
     <input type="submit" value="Submit and Next">
     <!-- <input type="submit skip" value="Skip"> -->
