--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -61,6 +61,8 @@
 				<div class="cd-title">
 					<h2>Round 1</h2>
 					<p>Get a land!!</p>
+					<br>
+					<h3 class="p1">Points: {{points}}</h3>
 				</div> <!-- .cd-title -->
 				<div class="cover"></div>
 				<div class="cd-project-info">
@@ -78,6 +80,8 @@
 				<div class="cd-title">
 					<h2>Round 2</h2>
 					<p>Pick the architect</p>
+					<br>
+					<h3 class="p2">Points: {{points}}</h3>
 				</div> <!-- .cd-title -->
 
 				<div class="cd-project-info">
@@ -94,7 +98,9 @@
 				<div class="cd-title">
 					<h2>Round 3</h2>
 					<p>Geotechnical and <br>Surveying</p>
-				</div> <!-- .cd-title -->
+					<br>
+					<h3 class="p3">Points: {{points}}</h3>
+				</div> <!-- .cd-title --> 
 
 				<div class="cd-project-info">
 					<p>
@@ -110,6 +116,8 @@
 				<div class="cd-title">
 					<h2>Round 4</h2>
 					<p>Excavation</p>
+					<br>
+					<h3 class="p4">Points: {{points}}</h3>
 				</div> <!-- .cd-title -->
 
 				<div class="cd-project-info">
@@ -129,6 +137,8 @@
 			<div class="cd-title">
 					<h2>Round 5</h2>
 					<p>Foundation</p>
+					<br>
+					<h3 class="p5">Points: {{points}}</h3>
 				</div> <!-- .cd-title -->
 
 				<div class="cd-project-info">
@@ -145,6 +155,7 @@
 			<div class="cd-title">
 					<h2>Round 6</h2>
 					<p>Mixed Design</p>
+
 				</div> <!-- .cd-title -->
 
 				<div class="cd-project-info">
