--- a/static/css/dash-style-round2.css
+++ b/static/css/dash-style-round2.css
@@ -443,6 +443,7 @@ Main Components
 }
 @media only screen and (min-width: 1170px) {
   .projects-container .cd-scroll {
+    bottom: 30vh;
     background-image: url("../image/cd-icon-arrow-desktop.svg");
   }
 }
@@ -567,4 +568,13 @@ Main Components
 
 .b1, .b3,.b4,.b5,.b6{
   display: none;
+}
+.p2,.p3,.p4,.p5{
+  visibility: hidden;
+}
+.p1{
+  font-weight: bold;
+  font-family: "PT Sans", sans-serif;
+  margin: 0 15%;
+  font-size: 120%;
 }
