--- a/static/css/dash-style-round3.css
+++ b/static/css/dash-style-round3.css
@@ -446,6 +446,7 @@ Main Components
 }
 @media only screen and (min-width: 1170px) {
   .projects-container .cd-scroll {
+    bottom: 30vh;
     background-image: url("../image/cd-icon-arrow-desktop.svg");
   }
 }
@@ -569,4 +570,13 @@ Main Components
 }
 .b1, .b2,.b4,.b5,.b6{
   display: none;
+}
+.p1,.p3,.p4,.p5{
+  visibility: hidden;
+}
+.p2{
+  font-weight: bold;
+  font-family: "PT Sans", sans-serif;
+  margin: 0 15%;
+  font-size: 120%;
 }
