--- a/static/css/dash-style-round4.css
+++ b/static/css/dash-style-round4.css
@@ -449,6 +449,7 @@ Main Components
 }
 @media only screen and (min-width: 1170px) {
   .projects-container .cd-scroll {
+    bottom: 30vh;
     background-image: url("../image/cd-icon-arrow-desktop.svg");
   }
 }
@@ -572,4 +573,13 @@ Main Components
 }
 .b1, .b2,.b3,.b5,.b6{
   display: none;
+}
+.p1,.p2,.p4,.p5{
+  visibility: hidden;
+}
+.p3{
+  font-weight: bold;
+  font-family: "PT Sans", sans-serif;
+  margin: 0 15%;
+  font-size: 120%;
 }
