--- a/static/css/dash-style.css
+++ b/static/css/dash-style.css
@@ -440,6 +440,7 @@ Main Components
 }
 @media only screen and (min-width: 1170px) {
   .projects-container .cd-scroll {
+    bottom: 30vh;
     background-image: url("../image/cd-icon-arrow-desktop.svg");
   }
 }
@@ -564,4 +565,7 @@ Main Components
 
 .b2, .b3,.b4,.b5,.b6{
   display: none;
+}
+.p1,.p2,.p3,.p4,.p5{
+  visibility: hidden;
 }
