--- a/templates/choice_R6_1.html
+++ b/templates/choice_R6_1.html
@@ -66,12 +66,12 @@
         Sandline Corporation: 11,360</br>
         Pentos Limited: 8610</br>
         Westeros & Esssos Co.: 7350</br>    
-        The Queen has been impressed by you dedication and has decided to reqard your for making it till the end by doubling your Gold Dragons.
+        The Queen has been impressed by you dedication and has decided to reqard your for making it till the end by tripling your Gold Dragons.
         You have {{money}} Gold Dragons left for this round. 
         Select Cement Quality:</p>
 <table style="width:100%">
   <tr>
-    <th>Cost(GD/KG)</th>
+    <th>Cost(10^-5 GD/KG)</th>
     <th>Sandline Corporation</th> 
     <th>Pentos Limited</th>
     <th>Westeros & Esssos Co.</th>
@@ -118,7 +118,7 @@
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Sandline Corporation</h5>
-            <p>Price: 10 GD/kg</p>
+            <p>Price: 412.72 GD</p>
           </div>
         </div>
         <!-- overlay --> 
@@ -131,7 +131,7 @@
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Pentos Limited</h5>
-            <p>Price: 8.5 GD/kg</p>
+            <p>Price: 350.10 GD</p>
           </div>
         </div>
         <!-- overlay --> 
@@ -144,7 +144,7 @@
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Westeros & Esssos Co.</h5>
-            <p>Price: 6.7 GD/kg</p>
+            <p>Price: 276.3 GD</p>
           </div>
         </div>
         </a>
