--- a/static/css/rules-custom.css
+++ b/static/css/rules-custom.css
@@ -39,13 +39,13 @@ a:hover {
 .bb-custom-wrapper,
 .bb-bookblock {
 	width: 100%;
-	height: 95%;
+	height: 90%;
 }
 
 .container {
 	position: relative;
 	left: 0px;
-	top:8vh;
+	top:2vh;
 	-webkit-transition: left 0.3s ease-in-out;
 	-o-transition: left 0.3s ease-in-out;
 	transition: left 0.3s ease-in-out;
@@ -60,8 +60,8 @@ a:hover {
 
 
 .bb-custom-wrapper nav {
-	top: 40px;
-	left: 47.5%;
+	top: 30px;
+	left: 10%;
 	position: absolute;
 	z-index: 1000;
 }
@@ -179,7 +179,7 @@ a:hover {
 	text-align: justify;
 }
 
-@media screen and (max-width: 800px){
+@media screen and (max-width: 1100px){
 	.no-js .menu-panel {
 		display: none;
 	}
@@ -187,6 +187,23 @@ a:hover {
 	.no-js .container {
 		padding: 0;
 	}
+	.container,
+.bb-custom-wrapper,
+.bb-bookblock {
+	
+	width: 85vw;
+	height: 85vh;
+}
+.content h2{
+	font-size: 200%
+}
+.container {
+	top: 8vh;
+	margin:0;
+}
+body{
+	width: 100vw;
+}
 }
 
 @media screen and (max-width: 400px){
