--- a/static/css/rules-style.css
+++ b/static/css/rules-style.css
@@ -31,7 +31,7 @@
   display: inline-block;
   position:absolute;
   right:45%;
-  z-index: 2000;
+  z-index: 3000;
 }
 
 .btn:active {
@@ -48,4 +48,9 @@
 .orange:hover {
   background-color: #101524;
   color:#ffffff;
+}
+@media screen and (max-width: 1100px){
+  .btn{
+    top:87vh;
+  }
 }
