update for text color

--- a/templates/rapidfire.html
+++ b/templates/rapidfire.html
@@ -74,6 +74,9 @@ input[type="submit skip"] {
   color:#fff;
   text-align: center;
 }
+input[type="text"]{
+  color: #000;
+}
 @media (max-width: 480px) {
   video {
     display: none;
