--- a/templates/rapidfire.html
+++ b/templates/rapidfire.html
@@ -155,9 +155,9 @@ input[type="submit skip"] {
     <input type="submit" value="Submit and Next">
     <!-- <input type="submit skip" value="Skip"> -->
     <!-- <button type="submit skip" value = "skip">SKIP</button> -->
-    <div id="buttons">
-        <a href="/rapidfire" class="btn orange">Skip</a>
-    </div>
+    <!-- <div id="buttons"> -->
+        <!-- <a href="/rapidfire" class="btn orange">Skip</a> -->
+    <!-- </div> -->
     </form>
   </div>
 </div>
