--- a/static/css/dash-style-round3.css
+++ b/static/css/dash-style-round3.css
@@ -572,7 +572,9 @@ Main Components
   display: none;
 }
 .p1,.p3,.p4,.p5{
-  visibility: hidden;
+  /*visibility: hidden;*/
+  display: none;
+  
 }
 .p2{
   font-weight: bold;
