--- a/static/css/dash-style-round6.css
+++ b/static/css/dash-style-round6.css
@@ -581,7 +581,8 @@ Main Components
   display: none;
 }
 .p1,.p2,.p3,.p4{
-  visibility: hidden;
+  display: none;
+  /*visibility: hidden;*/
 }
 .p5{
   font-weight: bold;
