--- a/templates/rapidfire_rules.html
+++ b/templates/rapidfire_rules.html
@@ -29,12 +29,9 @@
     </div>
     <ul class="nav navbar-nav">
       <li><a href="/dashboard">Dashboard</a></li>
-      <li class="active"><a href="/rules">Rules</a></li>
-      <li><a href="#">Page 2</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      <li><a href="/logout"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
     </ul>
   </div>
 </nav>
@@ -56,7 +53,7 @@
 	</nav>
 </header>
 		<div id="buttons">
-  			<a href="#0" class="btn orange">Proceed</a>
+  			<a href="/rapidfire" class="btn orange">Proceed</a>
 		</div>
 		<div id="container" class="container">	
 			<div class="bb-custom-wrapper">
@@ -66,7 +63,7 @@
 							<div class="scroller">
 								<h2>Rapid-Fire</h2>
 								<p>
-								Now we begin with the rapid fire round. The questions maybe image prompted, riddles, or word scrambles. The number of questions you can answer in the stipulated time bestow extra rewards. Make note that you cannot log out during this round. Doing so will result in you losing the extra Gold Dragons you may have earned.
+								Now we begin with the rapid fire round. The questions maybe image prompted, riddles, or word scrambles. The number of questions you can answer in the stipulated time bestow extra rewards. Make note that you cannot log out during this round. Doing so will result in you losing the extra Gold Dragons you may have earned. You have exactly 180 seconds to answer. Skip questions you cannot answer by clicking on submit.(No negative marking)
 							</p>
 							</div>
 						</div>
