--- a/templates/thanks.html
+++ b/templates/thanks.html
@@ -29,12 +29,9 @@
     </div>
     <ul class="nav navbar-nav">
       <li><a href="/dashboard">Dashboard</a></li>
-      <li class="active"><a href="/rules">Rules</a></li>
-      <li><a href="#">Page 2</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      <li><a href="/logout"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
     </ul>
   </div>
 </nav>
