minor changes, error handling

--- a/templates/choice_R6_2.html
+++ b/templates/choice_R6_2.html
@@ -117,7 +117,7 @@
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Sandline Corporation</h5>
-            <p>Price: 1.2 GD/kg</p>
+            <p>Price: 179.70 GD</p>
           </div>
         </div>
         <!-- overlay --> 
@@ -130,7 +130,7 @@
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Pentos Limited</h5>
-            <p>Price: 1 GD/kg</p>
+            <p>Price: 147.90 GD</p>
           </div>
         </div>
         <!-- overlay --> 
@@ -143,7 +143,7 @@
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Westeros & Esssos Co.</h5>
-            <p>Price: 0.8 GD/kg</p>
+            <p>Price: 119.32 GD</p>
           </div>
         </div>
         </a>
