--- a/templates/choice_R6_5.html
+++ b/templates/choice_R6_5.html
@@ -117,7 +117,7 @@
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Sandline Corporation</h5>
-            <p>Price: 65 GD/kg</p>
+            <p>Price: 75.3025 GD</p>
           </div>
         </div>
         <!-- overlay --> 
@@ -130,7 +130,7 @@
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Pentos Limited</h5>
-            <p>Price: 55 GD/kg</p>
+            <p>Price: 63.7 GD</p>
           </div>
         </div>
         <!-- overlay --> 
@@ -143,7 +143,7 @@
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Westeros & Esssos Co.</h5>
-            <p>Price: 47 GD/kg</p>
+            <p>Price: 56.42 GD</p>
           </div>
         </div>
         </a> 
