--- a/templates/home.html
+++ b/templates/home.html
@@ -18,7 +18,7 @@
 		<p><a href="https://goo.gl/forms/tgIy2H40keO4EmUD3" class="link">Click Here To Know More About These Events</a> <p>
 	</div>
 <div class="next">
-  			<a href="/login" class="btn orange">
+  			<a href="/signup" class="btn orange">
   				Begin Your Watch
   			</a>
 		</div>
