--- a/templates/rules.html
+++ b/templates/rules.html
@@ -33,8 +33,7 @@
       <li><a href="#">Page 2</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      <li><a href="/logout"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
     </ul>
   </div>
 </nav>
@@ -48,7 +47,7 @@
 		<ul>
 			<li><a href="/dashboard" ><span>Home</span></a></li>
 			<li><a href="/rules" class="active"><span>Rules</span></a></li>
-			<li><a href="/login"><span>Logout</span></a></li>
+			<li><a href="/logout"><span>Logout</span></a></li>
 			
 		</ul>
 
