--- a/templates/scenario_6_1.html
+++ b/templates/scenario_6_1.html
@@ -84,7 +84,7 @@ What do you advise him to do?
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Accept Queen’s offer</h5>
-            <p>Price: 1.5 Crore</p>
+            <p>Price: 150 GD</p>
           </div>
         </div>
         <!-- overlay --> 
@@ -97,7 +97,7 @@ What do you advise him to do?
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Uphold the contract.</h5>
-            <p>Price: 2 Crore</p>
+            <p>Price: 200 GD</p>
           </div>
         </div>
         <!-- overlay --> 
