--- a/templates/scenario_6_2.html
+++ b/templates/scenario_6_2.html
@@ -86,7 +86,7 @@
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Bribe Local Authorities</h5>
-            <p>Price: 2 Lakh</p>
+            <p>Price: 2 GD</p>
           </div>
         </div>
         <!-- overlay --> 
@@ -99,7 +99,7 @@
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Compensate Families</h5>
-            <p>Price: 8 Lakh</p>
+            <p>Price: 8 GD</p>
           </div>
         </div>
         <!-- overlay --> 
@@ -112,7 +112,7 @@
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Compensate Families and Increase Safety</h5>
-            <p>Price: 15 Lakh</p>
+            <p>Price: 15 GD</p>
           </div>
         </div>
         <!-- overlay --> 
