--- a/templates/choice_R6_3.html
+++ b/templates/choice_R6_3.html
@@ -117,7 +117,7 @@
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Sandline Corporation</h5>
-            <p>Price: 1.7 GD/kg</p>
+            <p>Price: 310.98 GD</p>
           </div>
         </div>
         <!-- overlay --> 
@@ -130,7 +130,7 @@
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Pentos Limited</h5>
-            <p>Price: 1.45 GD/kg</p>
+            <p>Price: 262.28 GD</p>
           </div>
         </div>
         <!-- overlay --> 
@@ -143,7 +143,7 @@
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Westeros & Esssos Co.</h5>
-            <p>Price: 1.1 GD/kg</p>
+            <p>Price: 201.22 GD</p>
           </div>
         </div>
         </a>
