--- a/templates/choice_R6_4.html
+++ b/templates/choice_R6_4.html
@@ -117,7 +117,7 @@
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Sandline Corporation</h5>
-            <p>Price: 2.1 GD/kg</p>
+            <p>Price: 39.52 GD</p>
           </div>
         </div>
         <!-- overlay --> 
@@ -130,7 +130,7 @@
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Pentos Limited</h5>
-            <p>Price: 1.9 GD/kg</p>
+            <p>Price: 35.37 GD</p>
           </div>
         </div>
         <!-- overlay --> 
@@ -143,7 +143,7 @@
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Westeros & Esssos Co.</h5>
-            <p>Price: 1.75 GD/kg</p>
+            <p>Price: 32.32 GD</p>
           </div>
         </div>
         </a> 
