--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -32,7 +32,6 @@
       <li><a href="/question">Resume</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
       <li><a href="/logout"><span class="glyphicon glyphicon-log-in"></span> LogOut</a></li>
     </ul>
   </div>
@@ -47,8 +46,8 @@
 
 		<ul>
 			<li><a href="/dashboard.html" class="active"><span>Home</span></a></li>
-			<li><a href="Rules.html"><span>Rules</span></a></li>
-			<li><a href="login.html"><span>Logout</span></a></li>
+			<li><a href="/rules"><span>Rules</span></a></li>
+			<li><a href="/logout"><span>Logout</span></a></li>
 			
 		</ul>
 
