--- a/templates/rapidfire_rules.html
+++ b/templates/rapidfire_rules.html
@@ -63,7 +63,9 @@
 							<div class="scroller">
 								<h2>Rapid-Fire</h2>
 								<p>
-								Now we begin with the rapid fire round. The questions maybe image prompted, riddles, or word scrambles. The number of questions you can answer in the stipulated time bestow extra rewards. Make note that you cannot log out during this round. Doing so will result in you losing the extra Gold Dragons you may have earned. You have exactly 180 seconds to answer. Skip questions you cannot answer by clicking on submit.(No negative marking)
+								Now we begin with the rapid fire round. The questions maybe image prompted, riddles, or word scrambles. The number of questions you can answer in the stipulated time bestow extra rewards. Make note that you cannot log out during this round. Doing so will result in you losing the extra Gold Dragons you may have earned. You have exactly 300 seconds to answer. Skip questions you cannot answer by clicking on submit.(No negative marking)
+								Give the answer in lowercase and without spaces. 
+								Eg - "The Wall" will be written as "thewall"
 							</p>
 							</div>
 						</div>
