--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -30,6 +30,8 @@
       <li class="active"><a href="#">Dashboard</a></li>
       <li><a href="/rules">Rules</a></li>
       <li><a href="/question">Resume</a></li>
+      <li><a href="/developers">Developers</a></li>
+
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <li><a href="/logout"><span class="glyphicon glyphicon-log-in"></span> LogOut</a></li>
